Fix search reasults z-index

--- a/website/static/css/search.css
+++ b/website/static/css/search.css
@@ -60,6 +60,7 @@
 
 /* Override search results styling */
 .navSearchWrapper .algolia-autocomplete .aa-dropdown-menu {
+  z-index: 999;
   background-color: #fff;
   border: 0;
   box-shadow: 0px 4px 15px rgba(138, 125, 125, 0.15);
